--- a/style.css
+++ b/style.css
@@ -54,10 +54,25 @@ nav ul li a {
     color: black;
     font-size: 17px;
     border-radius: 3px;   
+    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+    display: inline-block;
+}
+
+nav ul:hover li a {
+    opacity: .5;
+    text-decoration: none;
+    color: black;
+}
+
+.hover-eff:hover, .hover-eff:active {
+    opacity: 1;
+    text-decoration: none;
+    color: black !important;
+    transform: scale(1.1);
 }
 
 a.active, a:hover {
-    color: #b3b3b3 !important;
+    color: #d1cfcf !important;
     text-decoration: none !important;
 }
 
@@ -121,10 +136,6 @@ label img{
     }
     nav ul li a {
       font-size: 20px;
-    }
-    a:hover, a.active {
-      background: none;
-      color: #a8e2db;
     }
     #check:checked~ul {
       left: 0;
@@ -258,7 +269,6 @@ label img{
     height: var(--height);
     overflow: hidden;
     mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
-    margin-top: 10rem;
     margin-bottom: 10rem;
 }
 .slider .sliderList {
