--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -18,7 +18,7 @@
     --item4-filter: blur(30px);
     --item4-zIndex: 8;
     --item4-opacity: 1;
-    
+
     --item5-transform: translate(120%,30%) scale(0.3);
     --item5-filter: blur(40px);
     --item5-zIndex: 7;
@@ -31,6 +31,7 @@
     overflow: hidden;
     direction: ltr !important;
     margin-bottom: 10rem;
+    color: black;
 }
 .carousel .list{
     position: absolute;
@@ -213,7 +214,7 @@
     from{
         transform: var(--item1-transform);
         filter: var(--item1-filter);
-        opacity: var(--item1-opacity);        
+        opacity: var(--item1-opacity);
     }
 }
 
@@ -354,7 +355,7 @@
     width: 500px;
     height: 300px;
     content: '';
-    background-image: linear-gradient(70deg, #C8F9F3, #15B29F);
+    background-image: linear-gradient(70deg, #C8F9F3, #15B29F); /*#DC422A, blue*/
     position: absolute;
     z-index: -1;
     border-radius: 20% 30% 80% 10%;
@@ -368,6 +369,11 @@
     transform: translate(-100%, -50%) rotate(90deg);
     filter: blur(130px);
 }
+@media screen and (min-width: 991px){
+    .carousel {
+        margin-top: 10rem;
+    }
+}
 @media screen and (max-width: 991px){
     /* ipad, tablets */
     .carousel .list .item{
@@ -379,9 +385,6 @@
     .carousel.showDetail .list .item:nth-child(2) .detail .title{
         font-size: 2em;
     }
-    .carousel{
-        margin-top: 8rem;
-    }
 }
 @media screen and (max-width: 767px){
     /* mobile */
@@ -392,14 +395,14 @@
         width: 100%;
         font-size: 10px;
     }
-    
+
     .carousel .list{
         height: 100%;
     }
     .carousel .list .item:nth-child(2) .introduce{
         width: 50%;
     }
-    
+
     .carousel .list .item img{
         width: 40%;
     }
@@ -416,8 +419,5 @@
         display: flex;
         width: max-content;
         float: right;
-    }
-    .carousel{
-        margin-top: 5rem;
     }
 }
