--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -3704,3 +3704,32 @@ input, select, textarea {
 		  margin-top: 30px;
 		}
 	}
+
+	#systems_tag_live_chat {
+		direction: rtl;
+		color: black;
+	}
+
+	#chat-widget {
+		z-index: 60000 !important;
+		cursor: pointer;
+	}
+
+	#close-chat {
+		border: none !important;
+		font-size: large;
+		color: black !important;
+		box-shadow: none;
+		padding: 0 8px;
+		border-radius: 50px;
+	}
+
+	#close-chat:hover{
+		background-color: #dfdfe0;
+		border-radius: 50px;
+	}
+
+	.chat-window[data-v-6164ac83] {
+		background-color: white !important;
+		font-family: 'kigelia-arabic-bold' !important;
+	}
